--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -19,7 +19,11 @@
   text-align: center;
   position: relative;
   height: 100%;
-  width: 80%;
+  width: 70%;
+
+  @media (max-width: 1040px) {
+    width: 70%;
+  }
 
   @media (max-width: 767px) {
     width: 100%;
@@ -75,9 +79,9 @@
 
   .dashboard_title {
     color: $font-white-color;
-    word-spacing: -5px;
 
     h2 {
+      font-size: 2rem;
       font-weight: bold;
       padding-bottom: 0.5rem;
       @media (max-width: 519px) {
@@ -89,12 +93,9 @@
   .dashboard_register {
     margin-bottom: 2rem;
     span {
+      font-family: "Roboto Condensed", sans-serif;
       color: $font-white-color;
       font-weight: bold;
-
-      &:hover {
-        color: $green-color;
-      }
 
       @media (max-width: 519px) {
         font-size: 0.8rem;
@@ -116,6 +117,7 @@
     }
 
     span {
+      font-family: "Roboto Condensed", sans-serif;
       @media (max-width: 519px) {
         font-size: 0.8rem;
       }
