--- a/src/sass/_scorers.scss
+++ b/src/sass/_scorers.scss
@@ -12,44 +12,45 @@
     font-weight: bold;
     text-align: center;
     margin-bottom: 7rem;
-    word-spacing: -5px;
 
     @media (max-width: 991px) {
       padding-top: 5rem;
-      font-size: 1.6rem;
+      font-size: 2.2rem;
     }
 
     @media (max-width: 685px) {
-      font-size: 1.2rem;
+      font-size: 1.8rem;
     }
   }
 }
 
 .scorers_table {
+  border-radius: 5px;
+  overflow: hidden;
   color: $font-white-color;
   background: $second-color;
 
   @media (max-width: 1199px) {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 
   @media (max-width: 991px) {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
   @media (max-width: 767px) {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 
   @media (max-width: 685px) {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 
   @media (max-width: 527px) {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
   @media (max-width: 399px) {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
 
   td {
@@ -62,7 +63,7 @@
     }
 
     @media (max-width: 767px) {
-      padding: 0.3rem 1.6rem;
+      padding: 0.2rem 1.6rem;
     }
 
     @media (max-width: 685px) {
@@ -74,7 +75,7 @@
     }
 
     @media (max-width: 527px) {
-      padding: 0.2rem 0.9rem;
+      padding: 0.3rem 0.9rem;
     }
 
     @media (max-width: 497px) {
