--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -47,13 +47,13 @@
     font-weight: bold;
 
     @media (max-width: 552px) {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
     }
   }
 
   .form_control_signin {
     &:focus {
-      border: solid $border-color 3px;
+      border: solid $green-color 2px;
     }
   }
 
@@ -71,14 +71,14 @@
 
     .signin_button {
       padding: 0.5rem 1.5rem;
-      background: $green-color;
-      border-color: $green-color;
-      color: $second-color;
+      background: #a032c8;
+      border-color: #a032c8;
+      color: $font-white-color;
       font-weight: bold;
 
       &:hover {
         background: transparent;
-        color: $font-white-color;
+        transform: scale(1.1);
       }
 
       @media (max-width: 552px) {
