--- a/src/sass/_standings.scss
+++ b/src/sass/_standings.scss
@@ -18,7 +18,6 @@
     color: $font-white-color;
     font-weight: bold;
     text-align: center;
-    word-spacing: -5px;
     padding-bottom: 4rem;
 
     @media (max-width: 991px) {
@@ -26,7 +25,7 @@
     }
 
     @media (max-width: 490px) {
-      font-size: 1.1rem;
+      font-size: 1.3rem;
     }
   }
   @media (max-width: 490px) {
@@ -38,6 +37,7 @@
   color: $font-white-color;
   white-space: nowrap;
   overflow: hidden;
+  border-radius: 5px;
 
   @media (max-width: 1199px) {
     font-size: 0.9rem;
@@ -56,7 +56,7 @@
   }
 
   @media (max-width: 496px) {
-    font-size: 0.5rem;
+    font-size: 0.6rem;
   }
 
   td {
