--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -97,7 +97,7 @@
 
   span {
     padding: 1rem 0.9rem;
-    color: $green-color;
+    color: $font-white-color;
     font-family: "Pompiere", cursive;
     letter-spacing: 0.6px;
 
