--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -4,47 +4,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
+  margin-bottom: 11rem;
 }
 .signin_form {
   color: $font-white-color;
   width: 50%;
   padding-top: 3rem;
-  background: $second-color;
+  background: $background-opacity;
   position: relative;
-
-  color: $font-white-color;
-  background: $second-color;
-  background-clip: padding-box;
-  border: solid 5px transparent;
-  border-radius: 1em;
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    margin: -5px;
-    border-radius: inherit;
-    background: linear-gradient(
-      135deg,
-      rgba(80, 255, 134, 1) 0%,
-      rgba(80, 255, 134, 1) 4%,
-      rgba(99, 91, 209, 1) 24%,
-      rgba(182, 54, 217, 1) 48%,
-      rgba(154, 59, 250, 1) 75%,
-      rgb(40, 35, 104) 89%,
-      rgb(51, 45, 134) 100%
-    );
-  }
+  border-radius: 1rem;
 
   h2 {
     text-align: center;
     margin-bottom: 5rem;
     font-weight: bold;
+    text-shadow: $button-color 2px 2px;
+    letter-spacing: 2px;
 
     @media (max-width: 552px) {
       font-size: 1.8rem;
@@ -52,8 +27,11 @@
   }
 
   .form_control_signin {
+    background: $background-opacity;
+    color: $font-white-color;
     &:focus {
-      border: solid $green-color 2px;
+      background: lighten($background-opacity, 30%);
+      color: $font-white-color;
     }
   }
 
@@ -71,8 +49,8 @@
 
     .signin_button {
       padding: 0.5rem 1.5rem;
-      background: #a032c8;
-      border-color: #a032c8;
+      background: $button-color;
+      border-color: $button-color;
       color: $font-white-color;
       font-weight: bold;
 
@@ -101,7 +79,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: red;
+    color: $error-color;
     margin: 2rem 0;
 
     font-weight: bold;
