--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -3,4 +3,9 @@ $main-color: #0f0736;
 $font-white-color: #ffffff;
 $border-color: #635bd1;
 $second-color: #1f1a5f;
+$header-color: #270c39;
+$footer-color: rgba(80, 255, 134, 0.7);
 $green-color: #50ff86;
+$button-color: #a032c8;
+$error-color: #bc0001;
+$background-opacity: rgba(31, 26, 95, 0.8);
