--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,14 +3,8 @@
 header {
   max-height: 5rem;
   width: 100%;
-  background: linear-gradient(
-    135deg,
-    rgba(80, 255, 134, 1) 1%,
-    rgba(181, 54, 217, 1) 15%,
-    rgba(31, 42, 133, 1) 42%,
-    rgba(31, 25, 95, 1) 100%
-  );
-
+  background: $header-color;
+  border-bottom: 1px solid $button-color;
   @media (max-width: 575px) {
     padding: 0 1rem;
   }
