--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3,145 +3,98 @@
 .main_container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100%;
-  margin-bottom: 5rem;
+  align-items: flex-start;
+  min-height: 50vh;
   @media (max-width: 991px) {
+    margin-top: 4rem;
+  }
+  @media (max-width: 519px) {
     margin-top: 5rem;
+    min-height: 60vh;
   }
 }
 
 .dashboard_box {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+  min-height: 20vh;
+  max-width: 60%;
+
   justify-content: space-around;
   text-align: center;
-  position: relative;
-  height: 100%;
-  width: 70%;
 
   @media (max-width: 1040px) {
     width: 70%;
+  }
+
+  @media (max-width: 991px) {
+    min-height: 35vh;
   }
 
   @media (max-width: 767px) {
     width: 100%;
   }
 
-  color: $font-white-color;
-  background: $second-color;
-  background-clip: padding-box; /* !importanté */
-  border: solid 5px transparent;
-  border-radius: 1em;
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    margin: -5px;
-    border-radius: inherit;
-    background: linear-gradient(
-      135deg,
-      rgba(80, 255, 134, 1) 0%,
-      rgba(80, 255, 134, 1) 4%,
-      rgba(99, 91, 209, 1) 24%,
-      rgba(182, 54, 217, 1) 48%,
-      rgba(154, 59, 250, 1) 75%,
-      rgb(40, 35, 104) 89%,
-      rgb(51, 45, 134) 100%
-    );
-  }
-
-  .dashboard_image {
-    width: 30%;
-    padding-top: 2.5rem;
-    padding-bottom: 2rem;
-
-    @media (max-width: 991px) {
-      width: 50%;
-    }
-
-    @media (max-width: 767px) {
-      width: 60%;
-    }
-
-    img {
-      width: 90%;
-      height: 70%;
-      border-radius: 3px;
-    }
-  }
-
-  .dashboard_title {
-    color: $font-white-color;
-
-    h2 {
-      font-size: 2.3rem;
-      font-weight: bold;
-      padding-bottom: 0.5rem;
-      @media (max-width: 519px) {
-        font-size: 1.2rem;
-      }
-    }
-  }
-
-  .dashboard_register {
-    margin-bottom: 2rem;
-    span {
-      font-family: "Roboto Condensed", sans-serif;
-      color: $font-white-color;
-      font-weight: bold;
-      font-size: 1rem;
-
-      @media (max-width: 519px) {
-        font-size: 0.8rem;
-      }
-    }
+  @media (max-width: 519px) {
+    min-height: 20vh;
   }
 
   .dashboard_content {
+    min-height: 100%;
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
-    margin: 2rem 0;
-    font-size: 1.1rem;
+    justify-content: space-between;
+    align-items: center;
 
-    .dashboard_content__boxes {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      word-spacing: 1px;
+    @media (max-width: 991px) {
+      width: 100%;
+      font-size: 1.2rem;
     }
+    h2 {
+      font-family: "Livvic", sans-serif;
+      text-shadow: $button-color 2px 2px;
+      font-size: 2.5rem;
+      font-weight: bold;
+      letter-spacing: 3px;
+      text-align: center;
+      margin-bottom: 4rem;
+      text-transform: uppercase;
+      color: $font-white-color;
 
-    span {
-      font-family: "Roboto Condensed", sans-serif;
+      @media (max-width: 991px) {
+        font-size: 2rem;
+        margin-bottom: 3rem;
+      }
       @media (max-width: 519px) {
-        font-size: 0.8rem;
+        font-size: 1.6rem;
+        margin-bottom: 2rem;
       }
     }
-  }
 
-  .dashboard_arrow {
-    i {
-      font-size: 3.2rem;
-      margin: 3rem 0;
-      color: $green-color;
-      background: linear-gradient(
-        135deg,
-        rgba(80, 255, 134, 1) 0%,
-        rgba(80, 255, 134, 1) 4%,
-        rgba(99, 91, 209, 1) 24%,
-        rgba(182, 54, 217, 1) 48%,
-        rgba(154, 59, 250, 1) 75%,
-        rgba(31, 26, 95, 1) 89%,
-        rgba(31, 26, 95, 1) 100%
-      );
-      border-radius: 50%;
+    .dashboard_link {
+      text-transform: uppercase;
+      font-weight: bold;
+      &:hover {
+        color: $green-color;
+        text-decoration: none;
+      }
+
+      @media (max-width: 519px) {
+        font-size: 1rem;
+      }
+    }
+
+    h4 {
+      color: $font-white-color;
+      font-family: "Roboto Condensed", sans-serif;
+      font-size: 1.1rem;
+      color: darken($font-white-color, 20%);
+      margin-bottom: 2rem;
+      @media (max-width: 519px) {
+        font-size: 1rem;
+      }
     }
   }
 }
