--- a/src/sass/_standings.scss
+++ b/src/sass/_standings.scss
@@ -2,23 +2,30 @@
 
 .standings_container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 6rem;
+  min-height: 100vh;
+  margin-bottom: 11rem;
 
   @media (max-width: 517px) {
-    margin-bottom: 4rem;
+    margin-bottom: 9rem;
   }
   @media (max-width: 490px) {
-    margin-bottom: 2rem;
+    margin-bottom: 8rem;
   }
 
   h2 {
+    padding-bottom: 5rem;
+    font-family: "Livvic", sans-serif;
+    text-shadow: $button-color 2px 2px;
     color: $font-white-color;
+    font-size: 2rem;
     font-weight: bold;
+
+    letter-spacing: 3px;
     text-align: center;
-    padding-bottom: 4rem;
+    text-transform: uppercase;
 
     @media (max-width: 991px) {
       padding-top: 3rem;
@@ -139,5 +146,5 @@
 
 .table_list__positions {
   color: $font-white-color;
-  background: $second-color;
+  background: $background-opacity;
 }
