--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,99 +1,65 @@
 @import "colors";
 
 .main_container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   min-height: 50vh;
+  width: 65%;
+  padding-bottom: 11rem;
+
   @media (max-width: 991px) {
-    margin-top: 4rem;
-  }
-  @media (max-width: 519px) {
     margin-top: 5rem;
-    min-height: 60vh;
-  }
-}
-
-.dashboard_box {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  min-height: 20vh;
-  max-width: 60%;
-
-  justify-content: space-around;
-  text-align: center;
-
-  @media (max-width: 1040px) {
-    width: 70%;
   }
 
-  @media (max-width: 991px) {
-    min-height: 35vh;
-  }
-
-  @media (max-width: 767px) {
-    width: 100%;
-  }
-
-  @media (max-width: 519px) {
-    min-height: 20vh;
-  }
-
-  .dashboard_content {
-    min-height: 100%;
+  .dashboard_box {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    background: rgba(39, 12, 57, 0.8);
+    height: 100%;
+    border-radius: 5px;
 
-    @media (max-width: 991px) {
-      width: 100%;
-      font-size: 1.2rem;
-    }
-    h2 {
-      font-family: "Livvic", sans-serif;
-      text-shadow: $button-color 2px 2px;
-      font-size: 2.5rem;
-      font-weight: bold;
-      letter-spacing: 3px;
+    .dashboard_title {
+      padding: 5rem 2rem;
       text-align: center;
-      margin-bottom: 4rem;
-      text-transform: uppercase;
-      color: $font-white-color;
 
-      @media (max-width: 991px) {
-        font-size: 2rem;
-        margin-bottom: 3rem;
-      }
-      @media (max-width: 519px) {
-        font-size: 1.6rem;
-        margin-bottom: 2rem;
-      }
-    }
+      h2 {
+        font-family: "Roboto Condensed", sans-serif;
+        color: $font-white-color;
+        font-weight: bold;
+        letter-spacing: 3px;
+        text-shadow: $button-color 2px 2px;
+        text-transform: uppercase;
 
-    .dashboard_link {
-      text-transform: uppercase;
-      font-weight: bold;
-      &:hover {
-        color: $green-color;
-        text-decoration: none;
-      }
-
-      @media (max-width: 519px) {
-        font-size: 1rem;
+        @media (max-width: 523px) {
+          font-size: 1.7rem;
+        }
       }
     }
 
-    h4 {
-      color: $font-white-color;
-      font-family: "Roboto Condensed", sans-serif;
-      font-size: 1.1rem;
-      color: darken($font-white-color, 20%);
-      margin-bottom: 2rem;
-      @media (max-width: 519px) {
-        font-size: 1rem;
+    .dashboard_content {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding: 0 2rem;
+      .dashboard_link {
+        padding: 5rem 0;
+        text-transform: uppercase;
+        font-weight: bold;
+        &:hover {
+          color: $green-color;
+          text-decoration: none;
+        }
+      }
+
+      span {
+        color: $font-white-color;
+        font-family: "Roboto Condensed", sans-serif;
+        font-size: 1.1rem;
+        color: $font-white-color;
+
+        @media (max-width: 523px) {
+          font-size: 1rem;
+        }
       }
     }
   }
