--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,10 +1,11 @@
-@import "colors";
+@import "variables";
 
 header {
-  max-height: 5rem;
+  min-height: 5rem;
   width: 100%;
+  padding-top: 0.5rem;
   background: $header-color;
-  border-bottom: 1px solid $button-color;
+
   @media (max-width: 575px) {
     padding: 0 1rem;
   }
