--- a/src/sass/_loading.scss
+++ b/src/sass/_loading.scss
@@ -1,4 +1,4 @@
-@import "colors";
+@import "variables";
 
 .loading {
   position: fixed;
@@ -21,7 +21,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(rgba(12, 6, 45, 0.8), rgba(31, 26, 95, 0.8));
+  background: radial-gradient(rgba(39, 12, 57, 0.8), rgba(51, 13, 77, 0.8));
 }
 
 .loading:not(:required) {
@@ -42,11 +42,11 @@
 
   animation: spinner 1500ms infinite linear;
   border-radius: 0.5em;
-  box-shadow: rgba(181, 54, 217, 1) 1.5em 0 0 0,
-    rgba(181, 54, 217, 1) 1.1em 1.1em 0 0, rgba(181, 54, 217, 1) 0 1.5em 0 0,
-    rgba(181, 54, 217, 1) -1.1em 1.1em 0 0, rgba(181, 54, 217, 1) -1.5em 0 0 0,
-    rgba(181, 54, 217, 1) -1.1em -1.1em 0 0, rgba(181, 54, 217, 1) 0 -1.5em 0 0,
-    rgba(181, 54, 217, 1) 1.1em -1.1em 0 0;
+  box-shadow: rgba(80, 255, 134, 1) 1.5em 0 0 0,
+    rgba(80, 255, 134, 1) 1.1em 1.1em 0 0, rgba(80, 255, 134, 1) 0 1.5em 0 0,
+    rgba(80, 255, 134, 1) -1.1em 1.1em 0 0, rgba(80, 255, 134, 1) -1.5em 0 0 0,
+    rgba(80, 255, 134, 1) -1.1em -1.1em 0 0, rgba(80, 255, 134, 1) 0 -1.5em 0 0,
+    rgba(80, 255, 134, 1) 1.1em -1.1em 0 0;
 }
 
 @-webkit-keyframes spinner {
