--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,4 +1,4 @@
-@import "colors";
+@import "variables";
 
 .main_container {
   min-height: 50vh;
@@ -6,7 +6,16 @@
   padding-bottom: 11rem;
 
   @media (max-width: 991px) {
-    margin-top: 5rem;
+    margin-top: 3rem;
+    width: 75%;
+  }
+
+  @media (max-width: 767px) {
+    width: 85%;
+  }
+
+  @media (max-width: 401px) {
+    width: 90%;
   }
 
   .dashboard_box {
@@ -14,20 +23,19 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: rgba(39, 12, 57, 0.8);
     height: 100%;
-    border-radius: 5px;
 
     .dashboard_title {
-      padding: 5rem 2rem;
+      padding: 1rem 0 2rem 0;
       text-align: center;
 
-      h2 {
+      h1 {
         font-family: "Roboto Condensed", sans-serif;
         color: $font-white-color;
+        font-size: 2.8rem;
         font-weight: bold;
         letter-spacing: 3px;
-        text-shadow: $button-color 2px 2px;
+        text-shadow: $title-shadow 2px 2px;
         text-transform: uppercase;
 
         @media (max-width: 523px) {
@@ -40,26 +48,46 @@
       display: flex;
       flex-direction: column;
       text-align: center;
-      padding: 0 2rem;
-      .dashboard_link {
-        padding: 5rem 0;
-        text-transform: uppercase;
-        font-weight: bold;
-        &:hover {
-          color: $green-color;
-          text-decoration: none;
-        }
+      padding: 0 5rem;
+
+      @media (max-width: 523px) {
+        padding: 0 2rem;
       }
 
+      .dashboard_link {
+        color: $font-white-color;
+        padding: 2rem 0;
+        text-transform: uppercase;
+        font-weight: bold;
+
+        &:hover {
+          text-decoration: none;
+          color: $green-color;
+        }
+      }
+      i {
+        font-size: 2rem;
+        color: $green-color;
+      }
       span {
         color: $font-white-color;
         font-family: "Roboto Condensed", sans-serif;
         font-size: 1.1rem;
         color: $font-white-color;
 
+        &:hover {
+          color: darken($font-white-color, 50%);
+        }
+
         @media (max-width: 523px) {
           font-size: 1rem;
         }
+      }
+      p {
+        color: $font-white-color;
+        font-family: "Roboto Condensed", sans-serif;
+        font-size: 1.1rem;
+        color: $font-white-color;
       }
     }
   }
