--- a/src/sass/_myTeam.scss
+++ b/src/sass/_myTeam.scss
@@ -38,6 +38,7 @@
     font-size: 1.1rem;
     font-weight: bold;
     color: $font-white-color;
+    border-bottom: 1px solid $green-color;
 
     @media (max-width: 500px) {
       font-size: 1rem;
