--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -45,6 +45,7 @@
   padding-bottom: 5px;
 
   &:hover {
+    cursor: pointer;
     color: darken($font-white-color, 50%);
     text-decoration: none;
   }
